# OpenOversight

./: .dockerignore  .pre-commit-config.yaml  DEPLOY.md  Makefile  create_db.py  db_backup.py  fabfile.py  package.json  pyproject.toml  requirements.txt  setup.py  test_data.py
.github/: renovate.yml
.github/workflows/: main.yml
OpenOversight/app/: __init__.py  commands.py  config.py  model_imports.py  models.py  utils.py
OpenOversight/app/auth/: __init__.py  views.py
OpenOversight/app/main/: __init__.py  choices.py  downloads.py  forms.py  model_view.py  views.py
OpenOversight/migrations/: env.py
OpenOversight/migrations/versions/: 0acbb0f0b1ef_.py  0ed957db0058_add_description_to_officers.py  114919b27a9f_.py  2040f0c804b0_.py  2a9064a2507c_remove_dots_middle_initial.py  2c27bfebe66e_add_unique_internal_identifier_to_.py  3015d1dd9eb4_add_jobs_table.py  42233d18ac7b_.py  4a490771dda1_add_original_image_fk.py  562bd5f1bc1f_add_order_to_jobs.py  59e9993c169c_change_faces_to_thumbnails.py  5c5b80cab45e_add_approved.py  6045f42587ec_split_apart_date_and_time_in_incidents.py  6065d7cdcbf8_.py  770ed51b4e16_add_salaries_table.py  79a14685454f_add_featured_flag_to_faces_table.py  7bb53dee8ac9_add_suffix_column_to_officers.py  86eb228e4bc0_refactor_links.py  8ce3de7679c2_add_unique_internal_identifier_label.py  8ce7926aa132_.py  93fc3e074dcc_remove_link_length_cap.py  9e2827dae28c_.py  af933dc1ef93_.py  bd0398fe4aab_.py  c1fc26073f85_rank_rename_po_police_officer.py  ca95c047bf42_.py  cd39b33b5360_constrain_officer_gender_options.py  cfc5f3fd5efe_.py  d86feb8fa5d1_.py  e14a1aa4b58f_.py  e2c2efde8b55_face_model_fix.py  f4a41e328a06_.py
OpenOversight/tests/: conftest.py  test_utils.py
OpenOversight/tests/routes/: route_helpers.py  test_auth.py  test_image_tagging.py  test_user_api.py
dockerfiles/: Dockerfile
docs/: conf.py
flickrscraper/: flickrgroup.py  resize.and.detect.py
