[tool.poetry]
name = "openoversight"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "1.0.2"
python-dotenv = "0.7.1"
boto3 = "1.5.10"
werkzeug = "1.0.1"
wtforms = "2.3.3"
flask-bootstrap = "3.3.7.1"
flask-limiter = "1.0.1"
flask-login = "0.4.1"
flask-mail = "0.9.1"
flask-migrate = "2.1.1"
flask-sqlalchemy = "2.4.4"
flask-wtf = "0.14.3"
flask-sitemap = "0.3.0"
pillow = "7.2.0"
psycopg2 = "2.8.5"
python-dateutil = "2.8.1"
sqlalchemy = "1.3.0"
gunicorn = "19.9"
fabric3 = "1.14.post1"
itsdangerous = "0.24"
us = "1.0"
future = "0.18.2"
email-validator = "1.0.5"
bleach = "3.3.1"
bleach-allowlist = "1.0.3"
markdown = "3.2.2"
jinja2 = "2.11.3"
markupsafe = "1.1.1"
importlib-metadata = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
