[tool.poetry]
name = "openoversight"
version = "0.6.7"
description = "Police oversight and accountability through public data"
authors = ["Lucy Parsons Labs <info@lucyparsonslabs.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
python-dotenv = "^0.21.1"
boto3 = "^1.26.71"
Werkzeug = "^2.2.3"
WTForms = "^3.0.1"
Flask-Bootstrap = "^3.3.7.1"
Flask-Limiter = "^3.1.0"
Flask-Login = "^0.6.2"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^4.0.4"
Flask-SQLAlchemy = "^3.0.3"
Flask-WTF = "^1.1.1"
Flask-Sitemap = "^0.4.0"
Pillow = "^9.4.0"
psycopg2 = "^2.9.5"
python-dateutil = "^2.8.2"
SQLAlchemy = "^2.0.3"
gunicorn = "^20.1.0"
Fabric3 = "^1.14.post1"
itsdangerous = "^2.1.2"
us = "^2.0.2"
future = "^0.18.3"
email-validator = "^1.3.1"
bleach = "^6.0.0"
bleach-allowlist = "^1.0.3"
Markdown = "^3.4.1"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.2"
importlib-metadata = "^6.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
selenium = "^4.8.0"
nose = "^1.3.7"
pytest = "^7.2.1"
pytest-xdist = "^3.2.0"
Faker = "^17.0.0"
pytest-cov = "^4.0.0"
pytest-pep8 = "^1.0.6"
xvfbwrapper = "^0.2.9"
mock = "^5.0.1"
mypy = "^1.0.0"
Sphinx = "^6.1.3"
sphinx-autobuild = "^2021.3.14"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
